methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:59: error: Unmatched closing brace '}' ignored here
}
^